--- a/Loadstone.csproj
+++ b/Loadstone.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<AssemblyName>Loadstone</AssemblyName>
+		<AssemblyName>com.adibtw.loadstone</AssemblyName>
+		<Product>Loadstone</Product>
 		<Description>Make Levels Load Asynchronously</Description>
 		<Version>0.0.2</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -52,4 +53,19 @@
 	<ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
 		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
 	</ItemGroup>
+
+	<Target Name="PackageThunderstore" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
+		<Message Text="Zipping Files for Thunderstore" Importance="High"/>
+		<Exec Command="zip $(Product)Thunderstore.zip README.md manifest.json bin/Release/$(TargetFramework)/$(AssemblyName).dll"/>
+	</Target>
+
+	<Target Name="AddManifestToPackage" AfterTargets="PackageThunderstore" Condition="Exists('CHANGELOG.md')">
+		<Message Text="Adding Manifest to Package" Importance="High"/>
+		<Exec Command="zip $(Product)Thunderstore.zip CHANGELOG.md"/>
+	</Target>
+
+	<Target Name="AddToProfile" AfterTargets="Build">
+		<Message Text="Copying Compiled Mod $(Product) to Profile Plugins Folder" Importance="High"/>
+		<Copy SourceFiles="bin/$(Configuration)/$(TargetFramework)/$(AssemblyName).dll" DestinationFolder="$(PROFILE_PATH)"/>
+	</Target>
 </Project>
