--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Loadstone",
-	"description": "Relieves stuttering during level loading",
+	"description": "Reduces stuttering during level loading",
 	"version_number": "0.0.2",
 	"dependencies": ["BepInEx-BepInExPack-5.4.2100"],
 	"website_url": "https://github.com/AdalynBlack/Loadstone"
