--- a/Loadstone.csproj
+++ b/Loadstone.csproj
@@ -55,7 +55,8 @@
 
 	<Target Name="PackageThunderstore" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
 		<Message Text="Zipping Files for Thunderstore" Importance="High"/>
-		<Exec Command="zip $(Product)Thunderstore.zip README.md manifest.json bin/Release/$(TargetFramework)/$(AssemblyName).dll"/>
+		<Delete Files="$(Product)Thunderstore.zip"/>
+		<Exec Command="zip -j $(Product)Thunderstore.zip README.md manifest.json bin/Release/$(TargetFramework)/$(AssemblyName).dll"/>
 	</Target>
 
 	<Target Name="AddManifestToPackage" AfterTargets="PackageThunderstore" Condition="'$(Configuration)' == 'Release' And Exists('CHANGELOG.md')">
