Modified internal description to match store page

--- a/Loadstone.csproj
+++ b/Loadstone.csproj
@@ -3,7 +3,7 @@
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<AssemblyName>com.adibtw.loadstone</AssemblyName>
 		<Product>Loadstone</Product>
-		<Description>Make Levels Load Asynchronously</Description>
+		<Description>Reduces stuttering during level loading</Description>
 		<Version>0.0.2</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>latest</LangVersion>
