--- a/Loadstone.csproj
+++ b/Loadstone.csproj
@@ -59,8 +59,8 @@
 		<Exec Command="zip -j $(Product)Thunderstore.zip README.md manifest.json bin/Release/$(TargetFramework)/$(AssemblyName).dll"/>
 	</Target>
 
-	<Target Name="AddManifestToPackage" AfterTargets="PackageThunderstore" Condition="'$(Configuration)' == 'Release' And Exists('CHANGELOG.md')">
-		<Message Text="Adding Manifest to Package" Importance="High"/>
+	<Target Name="AddChangelogToPackage" AfterTargets="PackageThunderstore" Condition="'$(Configuration)' == 'Release' And Exists('CHANGELOG.md')">
+		<Message Text="Adding Changelog to Package" Importance="High"/>
 		<Exec Command="zip $(Product)Thunderstore.zip CHANGELOG.md"/>
 	</Target>
 
