--- a/Loadstone.csproj
+++ b/Loadstone.csproj
@@ -7,6 +7,9 @@
 		<Version>0.0.2</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>latest</LangVersion>
+
+		<ThunderDeps>["BepInEx-BepInExPack-5.4.2100"]</ThunderDeps>
+		<ThunderURL>https://github.com/AdalynBlack/Loadstone</ThunderURL>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -56,6 +59,7 @@
 	<Target Name="PackageThunderstore" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
 		<Message Text="Zipping Files for Thunderstore" Importance="High"/>
 		<Delete Files="$(Product)Thunderstore.zip"/>
+		<WriteLinesToFile File="manifest.json" Lines="{&quot;name&quot;: &quot;$(Product)&quot;,&quot;description&quot;: &quot;$(Description)&quot;,&quot;version_number&quot;: &quot;$(Version)&quot;,&quot;dependencies&quot;: $(ThunderDeps),&quot;website_url&quot;: &quot;$(ThunderURL)&quot;}" Overwrite="true"/>
 		<Exec Command="zip -j $(Product)Thunderstore.zip README.md manifest.json bin/Release/$(TargetFramework)/$(AssemblyName).dll"/>
 	</Target>
 
