--- a/Loadstone.csproj
+++ b/Loadstone.csproj
@@ -61,6 +61,7 @@
 		<Delete Files="$(Product)Thunderstore.zip"/>
 		<WriteLinesToFile File="manifest.json" Lines="{&quot;name&quot;: &quot;$(Product)&quot;,&quot;description&quot;: &quot;$(Description)&quot;,&quot;version_number&quot;: &quot;$(Version)&quot;,&quot;dependencies&quot;: $(ThunderDeps),&quot;website_url&quot;: &quot;$(ThunderURL)&quot;}" Overwrite="true"/>
 		<Exec Command="zip -j $(Product)Thunderstore.zip README.md manifest.json bin/Release/$(TargetFramework)/$(AssemblyName).dll"/>
+		<Delete Files="manifest.json"/>
 	</Target>
 
 	<Target Name="AddChangelogToPackage" AfterTargets="PackageThunderstore" Condition="'$(Configuration)' == 'Release' And Exists('CHANGELOG.md')">
