--- a/Loadstone.csproj
+++ b/Loadstone.csproj
@@ -4,7 +4,7 @@
 		<AssemblyName>com.adibtw.loadstone</AssemblyName>
 		<Product>Loadstone</Product>
 		<Description>Reduces stuttering during level loading</Description>
-		<Version>0.0.2</Version>
+		<Version>0.0.4</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>latest</LangVersion>
 
@@ -47,6 +47,9 @@
 		<Reference Include="LethalConfig">
 			<HintPath>.\Deps\Soft\LethalConfig.dll</HintPath>
 		</Reference>
+		<Reference Include="LC_SoundTool">
+			<HintPath>.\Deps\Soft\LC_SoundTool.dll</HintPath>
+		</Reference>
 		<Reference Include="LethalExpansionCore">
 			<HintPath>.\Deps\Soft\LethalExpansionCore.dll</HintPath>
 		</Reference>
@@ -61,6 +64,7 @@
 		<Delete Files="$(Product)Thunderstore.zip"/>
 		<WriteLinesToFile File="manifest.json" Lines="{&quot;name&quot;: &quot;$(Product)&quot;,&quot;description&quot;: &quot;$(Description)&quot;,&quot;version_number&quot;: &quot;$(Version)&quot;,&quot;dependencies&quot;: $(ThunderDeps),&quot;website_url&quot;: &quot;$(ThunderURL)&quot;}" Overwrite="true"/>
 		<Exec Command="zip -j $(Product)Thunderstore.zip README.md icon.png bin/Release/$(TargetFramework)/$(AssemblyName).dll manifest.json"/>
+		<Exec Command="zip -j $(Product)Thunderstore.zip PackageAdditions/*"/>
 		<Delete Files="manifest.json"/>
 	</Target>
 
