--- a/Loadstone.csproj
+++ b/Loadstone.csproj
@@ -10,6 +10,9 @@
 
 		<ThunderDeps>["BepInEx-BepInExPack-5.4.2100"]</ThunderDeps>
 		<ThunderURL>https://github.com/AdalynBlack/Loadstone</ThunderURL>
+
+		<LaunchCommand Condition="$(OS) == Windows_NT">&quot;$(LC_PATH)\Lethal Company.exe&quot; --doorstop-enable true --doorstop-target &quot;$(PROFILE_PATH)\..\core\BepInEx.Preloader.dll&quot;</LaunchCommand>
+		<LaunchCommand Condition="$(OS) == UNIX">wine &quot;$(LC_PATH)/Lethal Company.exe&quot; --doorstop-enable true --doorstop-target &quot;$(PROFILE_PATH)/../core/BepInEx.Preloader.dll&quot; &amp;</LaunchCommand>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -59,11 +62,11 @@
 		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
 	</ItemGroup>
 
-	<Target Name="PackageThunderstore" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
+	<Target Name="PackageThunderstore" AfterTargets="Build">
 		<Message Text="Zipping Files for Thunderstore" Importance="High"/>
 		<Delete Files="$(Product)Thunderstore.zip"/>
 		<WriteLinesToFile File="manifest.json" Lines="{&quot;name&quot;: &quot;$(Product)&quot;,&quot;description&quot;: &quot;$(Description)&quot;,&quot;version_number&quot;: &quot;$(Version)&quot;,&quot;dependencies&quot;: $(ThunderDeps),&quot;website_url&quot;: &quot;$(ThunderURL)&quot;}" Overwrite="true"/>
-		<Exec Command="zip -j $(Product)Thunderstore.zip README.md icon.png bin/Release/$(TargetFramework)/$(AssemblyName).dll manifest.json"/>
+		<Exec Command="zip -j $(Product)Thunderstore.zip README.md icon.png bin/$(Configuration)/$(TargetFramework)/$(AssemblyName).dll manifest.json"/>
 		<Exec Command="zip -j $(Product)Thunderstore.zip PackageAdditions/*"/>
 		<Delete Files="manifest.json"/>
 	</Target>
@@ -75,6 +78,10 @@
 
 	<Target Name="AddToProfile" AfterTargets="Build">
 		<Message Text="Copying Compiled Mod $(Product) to Profile Plugins Folder" Importance="High"/>
-		<Copy SourceFiles="bin/$(Configuration)/$(TargetFramework)/$(AssemblyName).dll" DestinationFolder="$(PROFILE_PATH)"/>
+		<Exec Command="unzip -o $(Product)Thunderstore.zip -d &quot;$(PROFILE_PATH)\AdiBTW-$(Product)&quot;"/>
+	</Target>
+
+	<Target Name="LaunchProfile" AfterTargets="AddToProfile" Condition="'$(Configuration)' == 'Launch'">
+		<Exec Command="$(LaunchCommand)"/>
 	</Target>
 </Project>
